--- a/my-datagrid-app/package.json
+++ b/my-datagrid-app/package.json
@@ -18,6 +18,7 @@
     "pspdfkit": "^2024.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-pdf-editor": "^1.1.2",
     "react-pdf-viewer": "^0.1.0",
     "react-router-dom": "^6.26.2",
